# Vyxen

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
crates/core/: Cargo.toml  README.md
crates/core/src/: components.rs  lib.rs
crates/geometry/: Cargo.toml  README.md
crates/geometry/src/: aabb.rs  lib.rs  shapes.rs
crates/input/: Cargo.toml  README.md
crates/input/src/: keycode.rs  lib.rs
crates/math/: Cargo.toml  README.md
crates/math/src/: lib.rs
crates/physics2d/: Cargo.toml  README.md
crates/physics2d/src/: bodies.rs  collision.rs  lib.rs  rigid.rs  soft.rs
crates/renderer/: Cargo.toml  README.md
crates/renderer/src/: color.rs  lib.rs  shader.wgsl  texture.rs
crates/renderer/src/backend/: gpu_texture.rs  mod.rs  shape_geoemtry.rs  shape_geometry.rs  state.rs  winit_reexports.rs
crates/vyxen/: Cargo.toml  README.md
crates/vyxen/src/: colors.rs  lib.rs  prelude.rs
scripts/: check_every_target.sh
shaders/: color.wgsl
testbed/: Cargo.toml
testbed/src/: main.rs
