[workspace]
resolver = "3"
members = ["crates/geometry","crates/math", "crates/physics2d","crates/vyxen", "crates/core", "testbed", "crates/renderer"]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.86"

homepage = "https://github.com/GlowyDeveloper/Vyxen"
repository = "https://github.com/GlowyDeveloper/Vyxen"
keywords = ["game", "engine", "gamedev", "gui"]
categories = ["gui", "game-development", "game-engines", "graphics"]
readme = "README.md"

[workspace.dependencies]
vyxen-math = { path = "crates/math" }
vyxen-geometry = { path = "crates/geometry" }
vyxen-physics2d = { path = "crates/physics2d" }
vyxen-renderer = { path = "crates/renderer" }
vyxen-core = { path = "crates/core" }
vyxen = { path = "crates/vyxen" }

winit = { version = "0.30", features = ["android-native-activity"] }
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.24", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

anyhow = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}