[workspace]
resolver = "3"
members = ["crates/geometry","crates/math", "crates/physics2d","crates/vyxen", "crates/core", "crates/renderer", "crates/input", "testbed"]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.86"

homepage = "https://github.com/GlowyDeveloper/Vyxen"
repository = "https://github.com/GlowyDeveloper/Vyxen"
keywords = ["game", "engine", "gamedev", "gui"]
categories = ["gui", "game-development", "game-engines", "graphics"]

[workspace.dependencies]
vyxen-math = { version = "0.1.0", path = "crates/math" }
vyxen-geometry = { version = "0.1.0", path = "crates/geometry" }
vyxen-physics2d = { version = "0.1.0", path = "crates/physics2d" }
vyxen-renderer = { version = "0.1.0", path = "crates/renderer" }
vyxen-input = { version = "0.1.0", path = "crates/input" }
vyxen-core = { version = "0.1.0", path = "crates/core" }
vyxen = { version = "0.1.0", path = "crates/vyxen" }

winit = { version = "0.30", features = ["android-native-activity"] }
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.24", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

anyhow = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}