[package]
name = "vyxen-core"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
vyxen-math.workspace = true
vyxen-geometry.workspace = true
vyxen-physics2d.workspace = true
vyxen-renderer.workspace = true

anyhow.workspace = true