[package]
name = "vyxen-core"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Many generic types to assist development with the Vyxen library"
readme = "README.md"

[dependencies]
vyxen-math.workspace = true
vyxen-geometry.workspace = true
vyxen-physics2d.workspace = true
vyxen-renderer.workspace = true
vyxen-input.workspace = true

anyhow.workspace = true

pollster.workspace = true
winit.workspace = true