[package]
name = "vyxen-geometry"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Shapes and geometry types for the Vyxen library"
readme = "README.md"

[dependencies]
vyxen-math.workspace = true