[package]
name = "vyxen-input"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Many input events and types to do with the Vyxen library"
readme = "README.md"

[dependencies]
winit.workspace = true