[package]
name = "vyxen-math"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Math types for the Vyxen library"
readme = "README.md"

[dependencies]
