[package]
name = "vyxen-physics2d"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Physics types for the Vyxen library in 2d development"
readme = "README.md"

[dependencies]
vyxen-math.workspace = true
vyxen-geometry.workspace = true