[package]
name = "vyxen-renderer"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
vyxen-math.workspace = true

winit.workspace = true
wgpu.workspace = true
pollster.workspace = true

env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
image.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "28.0", features = ["webgl"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_log.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true