[package]
name = "vyxen-renderer"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

description = "Renders the game for the Vyxen library"

[dependencies]
vyxen-math.workspace = true
vyxen-geometry.workspace = true

winit.workspace = true
wgpu.workspace = true

anyhow.workspace = true
bytemuck.workspace = true
image.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "28.0", features = ["webgl"] }