[package]
name = "vyxen"

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

description = "A Godot-style game engine library written in Rust."

[dependencies]
vyxen-math.workspace = true
vyxen-geometry.workspace = true
vyxen-physics2d.workspace = true
vyxen-core.workspace = true
vyxen-renderer.workspace = true